# chi-traffic-gcp

./: .gitignore  README.md  cloud_build_trigger.sh  create_terraform_sa.sh  dbt_cloud_build.sh  pyproject.toml
airflow/: add-dags-to-composer.cloudbuild.yaml  dags-to-composer.cloudbuild.yaml  requirements-test.txt  test-dags.cloudbuild.yaml
airflow/dags/: 1.0_chi_openData_to_gcs.py  1.1_chi_geo_to_gcs.py  2.0_chi_GCS_to_GCP.py  3.0_dbt_bq_container.py  chi_GCS_to_GCP.py  chi_geo_GCS_to_GCP.py  chi_openData_to_gcs.py  dbt_bq_container.py  example_dag.py  example_dag_test.py
airflow/scripts/: json_to_ndjson.py
airflow/utils/: add_dags_to_composer.py
dbt/: .gitignore  .user.yml  Dockerfile
dbt/chi_traffic_crash/: .gitignore  dbt_project.yml  profiles.yml
dbt/chi_traffic_crash/macros/: convert_to_boolean.sql  macros.yaml  string_empty_to_null.sql
dbt/chi_traffic_crash/models/: sources.yaml
dbt/chi_traffic_crash/models/mart/: dim_datetime.sql  dim_location.sql  fact_crash.sql  fact_people.sql  fact_vehicle.sql  mart.yaml
dbt/chi_traffic_crash/models/refined/: refined.yml  refined_dim_datetime.sql  refined_dim_location.sql  refined_dim_location_enriched.sql  refined_fact_crash.sql  refined_fact_people.sql  refined_fact_vehicle.sql  refined_neighborhood.sql  refined_ward.sql
dbt/chi_traffic_crash/models/staging/: staging_crash.sql  staging_neighborhood.sql  staging_people.sql  staging_vehicle.sql  staging_ward.sql
dbt/chi_traffic_crash/tests/generic/: unique_id_partition.sql
terraform/: main.tf  variables.tf
