[tool.poetry]
name = "chi-traffic-gcp"
version = "0.1.0"
description = ""
authors = ["GregoryTomy <95327355+GregoryTomy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
dbt-bigquery = "^1.8.3"
google-cloud-iam = "^2.15.2"
google-cloud-resource-manager = "^1.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
